// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SparklesIcon should render the SparklesIcon component when pressed is false 1`] = `
<svg
  className=""
  fill="none"
  height="17"
  viewBox="0 0 16 17"
  width="16"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M3.33284 2.96991V5.63658M1.99951 4.30324H4.66618M3.99951 12.3032V14.9699M2.66618 13.6366H5.33284M8.66618 2.96991L10.19 7.54134L13.9995 8.96991L10.19 10.3985L8.66618 14.9699L7.14237 10.3985L3.33284 8.96991L7.14237 7.54134L8.66618 2.96991Z"
    stroke="url(#gradient-0kdmaht)"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="1.33333"
  />
  <defs>
    <linearGradient
      gradientUnits="userSpaceOnUse"
      id="gradient-0kdmaht"
      x1="1.99951"
      x2="15.3308"
      y1="2.96991"
      y2="4.69764"
    >
      <stop
        offset="0%"
        stopColor="#A61E69"
      />
      <stop
        offset="100%"
        stopColor="#6366F1"
      />
    </linearGradient>
  </defs>
</svg>
`;

exports[`SparklesIcon should render the SparklesIcon component when pressed is true 1`] = `
<svg
  className=""
  fill="none"
  height="17"
  viewBox="0 0 16 17"
  width="16"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M3.33284 2.96991V5.63658M1.99951 4.30324H4.66618M3.99951 12.3032V14.9699M2.66618 13.6366H5.33284M8.66618 2.96991L10.19 7.54134L13.9995 8.96991L10.19 10.3985L8.66618 14.9699L7.14237 10.3985L3.33284 8.96991L7.14237 7.54134L8.66618 2.96991Z"
    stroke="white"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="1.33333"
  />
  <defs>
    <linearGradient
      gradientUnits="userSpaceOnUse"
      id="gradient-0kdmaht"
      x1="1.99951"
      x2="15.3308"
      y1="2.96991"
      y2="4.69764"
    >
      <stop
        offset="0%"
        stopColor="#A61E69"
      />
      <stop
        offset="100%"
        stopColor="#6366F1"
      />
    </linearGradient>
  </defs>
</svg>
`;
